src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>KV Media</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed%2FWon</fullName>
        </values>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>Identify Prospect</fullName>
        </values>
        <values>
            <fullName>Legal Review</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <description>Master Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed PO%2FVerbal</fullName>
        </values>
        <values>
            <fullName>Closed%2FWon</fullName>
        </values>
        <values>
            <fullName>Commitment to Buy</fullName>
        </values>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>Demonstration</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Identify Prospect</fullName>
        </values>
        <values>
            <fullName>Legal Review</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Presentation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Anticipated_Contract_Start_Date__c</fullName>
        <label>Anticipated Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Contract_Term_Months__c</fullName>
        <label>Anticipated Contract Term (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_URL__c</fullName>
        <formula>&apos;https://videotelmarineinternational--dev.my.salesforce.com/&apos;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <inlineHelpText>This will be updated part of the field updates for an Approval Process, defaulting to Not Required</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Billing Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Lost_to_Training_Provider__c</fullName>
        <label>Deal Lost to Training Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seagull</fullName>
                </value>
                <value>
                    <fullName>MTS</fullName>
                </value>
                <value>
                    <fullName>Moxie-Media</fullName>
                </value>
                <value>
                    <fullName>IDESS</fullName>
                </value>
                <value>
                    <fullName>Walport</fullName>
                </value>
                <value>
                    <fullName>Loyds Maritime Academy</fullName>
                </value>
                <value>
                    <fullName>Marlinx</fullName>
                </value>
                <value>
                    <fullName>John Sabella</fullName>
                </value>
                <value>
                    <fullName>Red Ensign, Ltd</fullName>
                </value>
                <value>
                    <fullName>Sque Marine</fullName>
                </value>
                <value>
                    <fullName>Atlas</fullName>
                </value>
                <value>
                    <fullName>Marine Learning Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <formula>Discount_Value__c / Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Applied__c</fullName>
        <description>Exchange Rate Applied</description>
        <inlineHelpText>If you are a multi currency org, this field will hold the exchange rate between the Opportunity Currency and your Corporate Currency.
            Value in Corporate Currency = Value in Opportunity Currency x Exchange Rate Applied</inlineHelpText>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Old Id from KVH instance</inlineHelpText>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IITIntended_Use__c</fullName>
        <label>Intended Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Intended_Use</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KVH_Sales_Office__c</fullName>
        <formula>TEXT( Account.Sales_Office__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Terms__c</fullName>
        <label>Terms (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_18_char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID (18-char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Vat_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Vat/Tax ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>KV Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner Agent Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_or_Vessel_Detail__c</fullName>
        <label>Platform or Vessel Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform_Vessel_Detail</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>KV Platform</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Shipping_Account_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary(Shipping) Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Shipping Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Conversion  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_total__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synced_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Shows the Quote record that is being synchronized with the Opportunity record.</inlineHelpText>
        <label>Synced Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOrderValue__c</fullName>
        <label>Total Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfitPercent__c</fullName>
        <label>Total Profit Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalQuoteValue__c</fullName>
        <label>Total Quote Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Discount_Percent__c</fullName>
        <formula>Discount_Value__c / Sub_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on Discount Value of the Order and Total Order Value</inlineHelpText>
        <label>Total Opportunity Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <label>Total Profit (Excl Tax/VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Vessels_in_the_Fleet__c</fullName>
        <inlineHelpText>Include the Total number of vessels in the fleet if applicable.</inlineHelpText>
        <label>Total # of Vessels in the Fleet</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vat_Roll_Up__c</fullName>
        <label>VAT</label>
        <summarizedField>Opportunity_Product__c.Vat_Roll_Up__c</summarizedField>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wet_or_Dry_Cargo__c</fullName>
        <label>Wet or Dry Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dry Cargo</fullName>
                </value>
                <value>
                    <fullName>Wet Cargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Vessels__c</fullName>
        <inlineHelpText>Number of Vessels related to this specific opportunity.</inlineHelpText>
        <label># of Vessels on this Opportunity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>KV_Agent_Beijing_Shipping_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>Beijing Shipping Business</value>
        </filters>
        <label>KV Agent- Beijing Shipping Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
            <portalRoleAndSubordinates>BeijingShippingBusinessTechnologyDevelopmentCompanyLtdPartnerUser</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_D4_Dynamics_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>equals</operation>
            <value>D4 Dynamics GmbH</value>
        </filters>
        <label>KV Agent - D4 Dynamics Opportunities</label>
        <sharedTo>
            <portalRole>D4DynamicsGmbHPartnerUser</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_Egyptian_Maritime_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>Egyptian Maritime Bureau</value>
        </filters>
        <label>KV Agent-Egyptian Maritime Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
            <portalRoleAndSubordinates>EgyptianMaritimeBureauPartnerUser</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_IMC_Group_P_C_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>IMC Group P.C.</value>
        </filters>
        <label>KV Agent - IMC Group P.C. Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_ISM_Solutions_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>ISM Solutions Inc.</value>
        </filters>
        <label>KV Agent - ISM Solutions Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_MCTC_Marine_Ltd_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>MCTC Marine Ltd</value>
        </filters>
        <label>KV Agent - MCTC Marine Ltd Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_Marcas_Limited_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>Marcas Limited</value>
        </filters>
        <label>KV Agent - Marcas Limited Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_Multimedia_HRD_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>equals</operation>
            <value>Multimedia HRD Pvt. Ltd.</value>
        </filters>
        <label>KV Agent - Multimedia HRD Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
            <portalRoleAndSubordinates>MultimediaHRDPvtLtdPartnerUser</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_Nautibond_C_A_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>Nautibond C.A.</value>
        </filters>
        <label>KV Agent - Nautibond C.A. Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
            <portalRole>NautibondCAPartnerUser</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_Nautical_Training_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>Nautical Training Systems Inc</value>
        </filters>
        <label>KV Agent-Nautical Training Opportunities</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
            <portalRole>NauticalTrainingSystemsIncPartnerUser</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Agent_North_Coast_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Agent_Account__c</field>
            <operation>contains</operation>
            <value>North Coast Maritime</value>
        </filters>
        <label>KV Agent - North Coast Opportunities</label>
        <sharedTo>
            <group>Salesforce_Admins</group>
            <portalRole>NorthCoastMaritimeConsultingPartnerUser</portalRole>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>